--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -76,6 +76,19 @@
     justify-content: space-between;
     align-items: center;
 
+    // background-color: lightgrey;
+
+    @media only screen and (max-width: 1024px) {
+        padding: 3rem;
+    }
+    @media only screen and (max-width: 768px) {
+        height: 70rem;
+    }
+    @media only screen and (max-width: 480px) {
+        height: 110rem;
+        padding: 3rem 0;
+    }
+
     &-top {
         display: flex;
         flex-direction: column;
@@ -83,6 +96,15 @@
         align-items: center;
         width: 70%;
         text-align: center;
+
+        // background-color: lightpink;
+
+        @media only screen and (max-width: 1024px) {
+            width: 90%;
+        }
+        @media only screen and (max-width: 480px) {
+            margin-bottom: 1rem;
+        }
     }
     &-heading {
         white-space: nowrap;
@@ -91,8 +113,25 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        align-items: flex-end;
         width: 90%;
         height: 32rem; /* 512px */
+
+        // background-color: lightsalmon;
+
+        @media only screen and (max-width: 1024px) {
+            width: 100%;
+            height: 37rem;
+        }
+        @media only screen and (max-width: 768px) {
+            height: 55rem;
+        }
+        @media only screen and (max-width: 480px) {
+            height: 95rem;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            align-items: center;
+        }
     }
     &-feature {
         display: flex;
@@ -102,10 +141,52 @@
         width: 27%; /* 332.37px */
         height: 13rem; /* 208px */
         text-align: justify;
+
+        // background-color: lightgreen;
+
+        @media only screen and (max-width: 1024px) {
+            justify-content: flex-start;
+            width: 30%;
+            height: 17rem;
+        }
+        @media only screen and (max-width: 768px) {
+            width: 45%;
+        }
+        @media only screen and (max-width: 480px) {
+            justify-content: center;
+            width: 75%;
+            height: 15rem;
+        }
     }
     &-icon {
-        font-size: 2.5rem;
-        color: $colorPrimary;
+        width: 2.5rem;
+        height: 2.5rem;
+        fill: $colorPrimary;
+    }
+    &-title {
+        white-space: nowrap;
+
+        @media only screen and (max-width: 1024px) {
+            font-size: 1rem;
+        }
+    }
+    &-desc {
+
+        @media only screen and (max-width: 1024px) {
+            font-size: 1.1rem;
+        }
+        @media only screen and (max-width: 540px) {
+            font-size: 1rem;
+        }
+        @media only screen and (max-width: 480px) {
+            font-size: 1.1rem;
+        }
+        @media only screen and (max-width: 375px) {
+            font-size: 1rem;
+        }
+        @media only screen and (max-width: 320px) {
+            font-size: .9rem;
+        }
     }
 }
 /* 2 section features */
