--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -200,14 +200,35 @@
     padding: 4rem 0 2rem 0; /* 64px 0 32px 0 */
     background-color: #e3f5eb;
 
+    @media only screen and (max-width: 540px) {
+        padding: 4rem .5rem;
+    }
+    @media only screen and (max-width: 480px) {
+        height: 80rem;
+    }
+    @media only screen and (max-width: 375px) {
+        height: 86rem;
+    }
+
     &-top {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
         width: 70%;
-        height: 6rem; /* 96px */
         text-align: center;
+
+        background-color: lightsalmon;
+
+        @media only screen and (max-width: 768px) {
+            width: 80%;
+        }
+        @media only screen and (max-width: 480px) {
+            width: 90%;
+        }
+        @media only screen and (max-width: 375px) {
+            margin-bottom: 3rem;
+        }
     }
     &-bottom {
         flex: 0 85%;
@@ -245,14 +266,32 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
+        // background-color: lightgreen;
     }
     &-box {
+        position: relative;
         width: 80%;
-        height: 10rem; /* 160px */
+        height: 10rem;
+
+        background-color: lightgreen;
+
+        @media only screen and (max-width: 768px) {
+            width: 90%;
+        }
+        @media only screen and (max-width: 480px) {
+            width: 100%;
+            height: 11rem;
+        }
+        
     }
     &-heading {
         letter-spacing: 1px;
         margin-bottom: .5rem;
+
+        @media only screen and (max-width: 768px) {
+            font-size: 1rem;
+        }
     }
     &-icon {
         float: left;
@@ -263,6 +302,37 @@
         border: 4px solid #e3a396;
         box-shadow: 2px 2px 5px rgba($colorBlack, .4);
         shape-outside: circle(50%);
+
+        @media only screen and (max-width: 540px) {
+            z-index: 10;
+
+            &.right:only-of-type {
+                position: absolute;
+                top: 50%;
+                right: -65%;
+                transform: translate(50%, -50%);
+            }
+            &.left:only-of-type {
+                position: absolute;
+                top: 50%;
+                left: -105%;
+                transform: translate(50%, -50%);
+            }
+        }
+        @media only screen and (max-width: 375px) {
+            &.left:only-of-type {
+                left: -120%;
+            }
+        }
+    }
+    &-text {
+        
+        @media only screen and (max-width: 768px) {
+            font-size: 1rem;
+        }
+        @media only screen and (max-width: 375px) {
+            font-size: .9rem;
+        }
     }
 }
 /* 3 section workflow */
