--- a/sass/components/_counter.scss
+++ b/sass/components/_counter.scss
@@ -12,10 +12,26 @@
 
     // background-color: red;
 
+    @media only screen and (max-width: 768px) {
+        width: 45%;
+        margin-bottom: 2rem;
+    }
+    @media only screen and (max-width: 480px) {
+        width: 47%;
+    }
+    @media only screen and (max-width: 375px) {
+        width: 75%;
+    }
+
     &-icon {
         width: 3rem;
         height: 3rem;
         fill: $colorWhite;
+
+        @media only screen and (max-width: 768px) {
+            width: 2.2rem;
+            height: 2.2rem;
+        }
     }
     &-num {
         font-family: $fontSecondary;
@@ -30,6 +46,7 @@
         letter-spacing: 1px;
         color: $colorWhite;
         white-space: nowrap;
+        text-transform: capitalize;
     }
 }
 /* counter */
