--- a/css/style.css
+++ b/css/style.css
@@ -594,10 +594,25 @@ a, a:link, a:visited {
   height: 80%;
   border-radius: 4px;
   background-color: #fff;
-  box-shadow: 0 2rem 2.5rem #00004040; }
+  box-shadow: 0 2rem 2.5rem rgba(0, 0, 0, 0.2); }
+  @media only screen and (max-width: 768px) {
+    .card {
+      width: 45%;
+      height: 45%; } }
+  @media only screen and (max-width: 480px) {
+    .card {
+      width: 75%;
+      height: 32%; } }
+  @media only screen and (max-width: 375px) {
+    .card {
+      width: 95%;
+      height: 30%; } }
   .card:nth-child(2) {
     position: relative;
     transform: scale(1.1); }
+    @media only screen and (max-width: 768px) {
+      .card:nth-child(2) {
+        transform: scale(1); } }
     .card:nth-child(2)::before {
       content: url("../../imgs/badge.png");
       position: absolute;
@@ -605,6 +620,9 @@ a, a:link, a:visited {
       top: 33%;
       right: 10%;
       transform: scale(1.3); }
+      @media only screen and (max-width: 768px) {
+        .card:nth-child(2)::before {
+          transform: scale(1.2); } }
     .card:nth-child(2)::after {
       content: 'Most \a popular.';
       /* \a white-spacing pre */
@@ -619,6 +637,10 @@ a, a:link, a:visited {
       font-size: .9rem;
       letter-spacing: 1.5px;
       line-height: 1.25; }
+      @media only screen and (max-width: 1024px) {
+        .card:nth-child(2)::after {
+          top: 36%;
+          right: 12%; } }
   .card-top {
     flex: 0 45%;
     display: flex;
@@ -1124,12 +1146,31 @@ a, a:link, a:visited {
   height: 55rem;
   padding: 4rem 5rem 2rem 5rem;
   background-color: #edeeee; }
+  @media only screen and (max-width: 1024px) {
+    .sec-card {
+      padding: 4rem 1rem 2rem; } }
+  @media only screen and (max-width: 768px) {
+    .sec-card {
+      height: 90rem; } }
+  @media only screen and (max-width: 480px) {
+    .sec-card {
+      justify-content: space-around;
+      height: 125rem; } }
   .sec-card-cards {
-    flex: 0 0 90%;
+    flex: 0 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%; }
+    @media only screen and (max-width: 768px) {
+      .sec-card-cards {
+        flex: 0 95%;
+        flex-wrap: wrap;
+        justify-content: space-around; } }
+    @media only screen and (max-width: 480px) {
+      .sec-card-cards {
+        flex-wrap: nowrap;
+        flex-direction: column; } }
 
 /* 5 section card */
 /* 6 section idea */
