--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,12 +6,28 @@
     height: 80%;
     border-radius: 4px;
     background-color: $colorWhite;
-    box-shadow: 0 2rem 2.5rem #00004040;
-    
+    box-shadow: 0 2rem 2.5rem rgba($colorBlack, 0.2);
+
+    @media only screen and (max-width: 768px) {
+        width: 45%;
+        height: 45%;
+    }
+    @media only screen and (max-width: 480px) {
+        width: 75%;
+        height: 32%;
+    } 
+    @media only screen and (max-width: 375px) {
+        width: 95%;
+        height: 30%;
+    }   
 
     &:nth-child(2) {
         position: relative;
         transform: scale(1.1);
+
+        @media only screen and (max-width: 768px) {
+            transform: scale(1);
+        }
 
         &::before {
             content: url('../../imgs/badge.png');
@@ -20,6 +36,10 @@
             top: 33%;
             right: 10%;
             transform: scale(1.3);
+
+            @media only screen and (max-width: 768px) {
+                transform: scale(1.2);
+            }
         }
         &::after {
             content: 'Most \a popular.'; /* \a white-spacing pre */
@@ -34,6 +54,11 @@
             font-size: .9rem;
             letter-spacing: 1.5px;
             line-height: 1.25;
+
+            @media only screen and (max-width: 1024px) {
+                top: 36%;
+                right: 12%;
+            }
         }
     }
     &-top {
