--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -70,13 +70,14 @@
     }
     /* btn-middle */
     &-middle {
-        font-size: 0.9rem;
         padding: 1.5rem 7rem;
+        font-size: 0.9rem;
     }
     /* btn-large */
     &-large {
-        font-size: .9rem;
         padding: 2rem 8rem;
+        font-size: .9rem;
+        white-space: nowrap;
     }
 }
 /* btn */
