--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $colorSecondary: #17015d;
 $colorFont1: #504f4f;
 
 /* font family */
+$fontPrimary: 'Open Sans', sans-serif;
 $fontSecondary: 'Nunito', sans-serif;
 
 /* general color */
