--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -29,7 +29,7 @@ html {
 }
 body {
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: $fontPrimary;
     font-weight: 400;
     line-height: 1.5;
     color: $colorFont1;
