--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -13,6 +13,7 @@
     align-items: center;
     height: 39rem;
     padding: 4rem 6rem 1rem 6rem;
+    animation: animation-secInfo .4s ease-out;
 
     // background-color: lightsalmon;
 
@@ -46,7 +47,7 @@
 
         // background-color: lightcyan;
 
-        @media only screen and (max-width: 768px) {
+        /* @media only screen and (max-width: 768px) {
             height: 80%;
         }
         @media only screen and (max-width: 480px) {
@@ -56,6 +57,17 @@
         }
         @media only screen and (max-width: 375px) {
             // height: 50%;
+            flex: 0 50%;
+        } */
+        @include responsive(768px) {
+            height: 80%;
+        }
+        @include responsive(480px) {
+            flex: 0 40%;
+            align-items: center;
+            text-align: center;
+        }
+        @include responsive(375px) {
             flex: 0 50%;
         }
     }
